--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <module>cloud-consumer-hystrix-dashboard9001</module>
         <module>cloud-gateway-gateway9527</module>
         <module>cloud-configcenter3344</module>
+
+        <module>cloud-config-client-3366</module>
     </modules>
     <packaging>pom</packaging>
 
