--- a/cloud-config-client-3366/pom.xml
+++ b/cloud-config-client-3366/pom.xml
@@ -24,6 +24,12 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
+            <version>4.0.4</version>
+        </dependency>
+        <!--2020.X.X版本官方重构了bootstrap引导配置的加载方式，需要添加以下依赖-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
