--- a/cloudalibaba-provider-payment9004/src/main/resources/application.yml
+++ b/cloudalibaba-provider-payment9004/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 9001
+  port: 9004
 
 spring:
   application:
-    name: nacosProvider
+    name: nacos-payment-provider
   cloud:
     nacos:
       discovery:
